--- a/communities.yml
+++ b/communities.yml
@@ -1,5 +1,14 @@
 communities:
+- core:
+    name: Galaxy Core Developement
+    repositories:
+    - galaxyproject/galaxy
 - image:
-    name: Galaxy Image Community
+    name: Image Analysis
     categories:
     - Imaging
+- microgalaxy:
+    name: Microbial Data Analysis
+    categories: galaxyproject/galaxy_tool_metadata_extractor/data/microgalaxy/categories
+    exclude: galaxyproject/galaxy_tool_metadata_extractor/data/microgalaxy/tools_to_exclude
+    keep: galaxyproject/galaxy_tool_metadata_extractor/data/microgalaxy/tools_to_keep
