--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,14 @@ name: galaxy-community-activities
 channels:
   - conda-forge
 dependencies:
+  - python >=3.10
+  - pandas
   - c-compiler
   - compilers
   - cxx-compiler
   - ruby
+  - pip
+  - pip:
+    - PyGithub
+    - pyyaml
+    - tqdm
