--- a/communities.yml
+++ b/communities.yml
@@ -1,13 +1,16 @@
 communities:
-  core:
+
+  - id: core
     name: Galaxy Core Developement
     repositories:
     - galaxyproject/galaxy
-  image:
+
+  - id: image
     name: Image Analysis
     categories:
     - Imaging
-  microgalaxy:
+
+  - id: microgalaxy
     name: Microbial Data Analysis
     categories: galaxyproject/galaxy_tool_metadata_extractor/data/microgalaxy/categories
     exclude: galaxyproject/galaxy_tool_metadata_extractor/data/microgalaxy/tools_to_exclude
