--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,8 @@ jobs:
 
       - name: Update cache
         run: python -m activities.cli --fetch
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
 
       - name: Commit and push updated cache
         uses: stefanzweifel/git-auto-commit-action@v5
