--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,10 +65,11 @@ jobs:
           environment-file: environment.yml
 
       - name: Install Jekyll
+        shell: bash
         run: |
           conda info
-          sudo gem install jekyll
-          sudo ln -s $(which ruby) $CONDA/share/rubygems/bin/
+          gem install jekyll
+          ln -s $(which ruby) $CONDA/share/rubygems/bin/
 
       - name: Build report
         run: python -m activities.cli --report
