--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -7,30 +7,8 @@ on:
     types: [completed]
 
 jobs:
-  update_cache:
-    name: Update cache
-    permissions:
-      contents: write
-    runs-on: ubuntu-latest
-    steps:
 
-      - name: Initialize
-        uses: actions/checkout@v2
-
-      - name: Install dependencies
-        run: pip install pandas PyGithub pyyaml tqdm
-
-      - name: Update cache
-        run: python -m activities.cli --fetch
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-
-      - name: Commit and push updated cache
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: Update cache
-
-  build_report:
+  build_and_deploy:
     needs: update_cache
     name: Build and deploy report
     permissions:
