--- a/communities.yml
+++ b/communities.yml
@@ -3,21 +3,25 @@ communities:
   - id: core
     name: Core Developement
     repositories:
-    - galaxyproject/galaxy
+      - galaxyproject/galaxy
 
   - id: gtn
     name: Training Network
     repositories:
-    - galaxyproject/training-material
+      - galaxyproject/training-material
 
   - id: image
     name: Image Analysis
     url: imaging.usegalaxy.eu
     categories:
-    - Imaging
+      - Imaging
 
   - id: microgalaxy
     name: Microbial Data Analysis
     short_name: microgalaxy
     categories:
-    - expand: https://raw.githubusercontent.com/galaxyproject/galaxy_tool_metadata_extractor/main/data/microgalaxy/categories
+      - expand: https://raw.githubusercontent.com/galaxyproject/galaxy_tool_metadata_extractor/main/data/microgalaxy/categories
+    exclude-tools:
+      - expand: https://raw.githubusercontent.com/galaxyproject/galaxy_tool_metadata_extractor/main/data/microgalaxy/tools_to_exclude
+    keep-tools:
+      - expand: https://raw.githubusercontent.com/galaxyproject/galaxy_tool_metadata_extractor/main/data/microgalaxy/tools_to_keep
